# Kupfer-Plugins

./: .gitignore  Kupfer-Plugins.komodoproject  Kupfer-Plugins.kpf  README  README.md  kupfer  plugin_template.py
aftership/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  aftership.py  kupfer  setup.cfg  setup.py  tox.ini
aftership/.github/: ISSUE_TEMPLATE.md
android_controller/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  android_controller.py  setup.cfg  setup.py  tox.ini
android_controller/.github/: ISSUE_TEMPLATE.md
autocomplete/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  autocomplete.py  setup.cfg  setup.py  tox.ini
autocomplete/.github/: ISSUE_TEMPLATE.md
credit_card_generator/: CONTRIBUTING.rst  Makefile  README.rst  credit_card_generator.py  requirements_dev.txt  setup.cfg  setup.py  tox.ini
credit_card_generator/.github/: ISSUE_TEMPLATE.md
curreios/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  curreios.py  setup.cfg  setup.py  tox.ini
curreios/.github/: ISSUE_TEMPLATE.md
docs/: index.html  token.html
empathetic/: CONTRIBUTING.rst  LICENSE  Makefile  README.rst  empathetic.py  setup.cfg  setup.py  tox.ini
empathetic/.github/: ISSUE_TEMPLATE.md
empathy/: empathy.py
folks/: CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  print.py  setup.cfg  setup.py  tox.ini
folks/.github/: ISSUE_TEMPLATE.md
folks/folks/: __init__.py  folks.py  geeterator.py  go.py  plugin.py
folks/test/: __main__.py  go.py
gerador_de_cpf/: CONTRIBUTING.rst  LICENSE  Makefile  README.rst  gerador_de_cpf.py  setup.cfg  setup.py  tox.ini
gerador_de_cpf/.github/: ISSUE_TEMPLATE.md
git/: CONTRIBUTING.rst  Makefile  README.rst  git.py  setup.cfg  setup.py  tox.ini
git/.github/: ISSUE_TEMPLATE.md
gmusicbrowser/: gmusicbrowser_plugin.py
gmusicbrowser/mpris_utils/: mpris_utils.nja  mpris_utils.py
gtkicons/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  gtkicons.py  setup.cfg  setup.py  tox.ini
gtkicons/.github/: ISSUE_TEMPLATE.md
jira/: CONTRIBUTING.rst  Makefile  README.rst  jira.py  setup.cfg  setup.py  tox.ini
jira/.github/: ISSUE_TEMPLATE.md
jira_plugin/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  jira_plugin.py  setup.cfg  setup.py  tox.ini
jira_plugin/.github/: ISSUE_TEMPLATE.md
k2e/: __init__.py
kupfer_keyring/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  kupfer_keyring.py  requirements_dev.txt  setup.cfg  setup.py  tox.ini
kupfer_keyring/.github/: ISSUE_TEMPLATE.md
maemo-controler/: README.txt
marketplace/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  marketplace.py  requirements_dev.txt  setup.cfg  setup.py  tox.ini
marketplace/.github/: ISSUE_TEMPLATE.md
mpris-utils/mprisplayermock/: Player.py  __init__.py
mpris-utils/mprisutils/: _MprisInterfaces.py  _MprisPlayer.py  _MprisPlaylist.py  _MprisTrack.py  _MprisTracklist.py  _MprisUtils.py  __init__.py
mpris-utils/test/: MprisPlayer.py  MprisTack.py  MprisUtils.py  __init__.py  mainlootest.py  unitest.py
mpris2-player/: README  mpris2-player-plus.py  mpris2-player.py
mpris_2/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  mpris_2.py  mpris_2_plus.py  setup.cfg  setup.py  tox.ini
mpris_2/.github/: ISSUE_TEMPLATE.md
pidgin_smiley/: CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pidgin_smiley.py  setup.cfg  setup.py  tox.ini
pidgin_smiley/.github/: ISSUE_TEMPLATE.md
pip_interface/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pip_interface.py  requirements_dev.txt  setup.cfg  setup.py  tox.ini
pip_interface/.github/: ISSUE_TEMPLATE.md
plugin_template/: CONTRIBUTING.rst  README.rst  plugin_template.py  setup.cfg  setup.py
qrcode/: show_qrcode.py
remmina/: CONTRIBUTING.rst  Makefile  README.rst  remmina.py  remmina_plugin.py  setup.cfg  setup.py  tox.ini
remmina/.github/: ISSUE_TEMPLATE.md
restart/: restart.py
restart_app/: CONTRIBUTING.rst  LICENSE  Makefile  README.rst  restart_app.py  setup.cfg  setup.py  tox.ini
restart_app/.github/: ISSUE_TEMPLATE.md
shortcuts/: EclipseShortcuts.dict.json  REAME.md  app_shortcuts.py  ms_visual_studio_2010.json  shortcuts.xdotool.json
show_qrcode/: CONTRIBUTING.rst  Makefile  README.rst  setup.cfg  setup.py  show_qrcode.py  tox.ini
show_qrcode/.github/: ISSUE_TEMPLATE.md
smiley/: REAME.md  smiley.py
trackingmore/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  setup.cfg  setup.py  tox.ini  trackingmore.py
trackingmore/.github/: ISSUE_TEMPLATE.md
tuiuiu/: CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini  tuiuiu.py
tuiuiu/.github/: ISSUE_TEMPLATE.md
url_encode/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini  url_encode.py
url_encode/.github/: ISSUE_TEMPLATE.md
ymeme/: .project  .pydevproject
ymeme/ymeme/: ymeme.py
