[bumpversion]
current_version = 0.1.2
commit = True
tag = True
tag_name = empathetic_{new_version}

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:empathetic.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
name = kupfer_plugin_empathetic
description-file = README.rst
summary = Access to Empathy Contacts
author = Jakh Daven
author-email = tuxcanfly@gmail.com
home-page = https://github.com/hugosenari/empathetic
license = GNU General Public License v3
keywords = kupfer empathetic
classifiers = Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5

