[bumpversion]
current_version = 0.1.0
commit = True
tag = True
tag_name = gerador_de_cpf_{new_version}

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:gerador_de_cpf.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
name = kupfer_plugin_gerador_de_cpf
description-file = README.rst
summary = Create random Braziliam Social ID (CPF)
author = Hugo Sena Ribeiro
author-email = hugosenari@gmail.com
home-page = https://github.com/hugosenari/gerador_de_cpf
license = MIT license
keywords = kupfer gerador_de_cpf

classifiers = Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
