[bumpversion]
current_version = 0.1.2
commit = True
tag = True
tag_name = git_{new_version}

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:git.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
name = kupfer_plugin_git
description-file = README.rst
summary = Control your git repository with kupfer
author = Hugo Sena Ribeiro
author-email = hugosenari@gmail.com
home-page = https://github.com/hugosenari/Kupfer-Plugins
license = MIT license
keywords = kupfer git
classifiers = Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5

