[metadata]
name = kupfer_plugin_name
description-file = README.rst
version = 0.2
summary = kupfer_plugin_description
author = autor name
author-email = hugosenari@gmail.com
home-page = https://github.com/hugosenari/Kupfer-Plugins/
license = ISC license
keywords = kupfer

classifiers = Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
