[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:restart_app.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
name = kupfer_plugin_restart_app
description-file = README.rst
summary = Add action to restart Application that are running
author = Hugo Sena Ribeiro
author-email = hugosenari@gmail.com
home-page = https://github.com/hugosenari/restart_app
license = Apache Software License 2.0
keywords = kupfer restart_app

classifiers = Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
